<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.truongnqt.popcorn.moviesFragment.MovieViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="none"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linearLayout_movies_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="78dp"
                    android:layout_marginEnd="66dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginBottom="35dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hello"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jane"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginStart="3dp"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@drawable/ic_notification"
                        tools:ignore="ContentDescription,RtlHardcoded" />
                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/layout_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/shape_bg_search">

                    <ImageView
                        android:id="@+id/mic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:paddingStart="17dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="17dp"
                        android:paddingBottom="14dp"
                        android:src="@drawable/ic_mic"
                        tools:ignore="ContentDescription" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="0.5dp"
                        android:layout_height="34dp"
                        android:layout_marginTop="9dp"
                        android:layout_toStartOf="@+id/mic"
                        android:background="@color/white" />

                    <EditText
                        android:id="@+id/edt_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="55dp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="12dp"
                        android:hint="@string/search"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:autofillHints="" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/layout_now_showing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_popular"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_view_all_now_showing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:clickable="true"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="RtlHardcoded"
                        android:focusable="true" />

                </FrameLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_page_now_showing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:orientation="horizontal"/>

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/circle_indicator_now_showing"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    app:ci_drawable="@drawable/bg_indicator"
                    android:layout_gravity="center_horizontal"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp">

                    <TextView
                        android:id="@+id/genres_layout_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_bg_search"
                        android:drawablePadding="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="32dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/genres"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/TV_layout_text_view"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableTopCompat="@drawable/ic_genres" />

                    <TextView
                        android:id="@+id/TV_layout_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_series"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp"
                        android:drawablePadding="11dp"
                        android:paddingTop="29dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="11dp"
                        android:paddingRight="11dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/genres_layout_text_view"
                        app:layout_constraintRight_toLeftOf="@+id/movies_layout_text_view"
                        android:background="@drawable/shape_bg_search"
                        app:drawableTopCompat="@drawable/ic_tv" />


                    <TextView
                        android:id="@+id/movies_layout_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movies"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp"
                        android:drawablePadding="10dp"
                        android:paddingTop="22dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="9dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/TV_layout_text_view"
                        app:layout_constraintRight_toLeftOf="@+id/in_theatre_layout_text_view"
                        android:background="@drawable/shape_bg_search"
                        app:drawableTopCompat="@drawable/ic_movies" />

                    <TextView
                        android:id="@+id/in_theatre_layout_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_bg_search"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="26dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/trending"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/movies_layout_text_view"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableTopCompat="@drawable/ic_in_theatre" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/layout_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_view_all_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:clickable="true"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="RtlHardcoded"
                        android:focusable="true" />

                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_show_small_movie"
                    android:orientation="horizontal"/>

                <FrameLayout
                    android:id="@+id/layout_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_view_all_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:clickable="true"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="RtlHardcoded"
                        android:focusable="true" />

                </FrameLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_page_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:orientation="horizontal" />

                <FrameLayout
                    android:id="@+id/layout_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_view_all_top_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:clickable="true"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="RtlHardcoded"
                        android:focusable="true" />

                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_show_small_movie"
                    android:orientation="horizontal" />

            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/loadingFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progress_bar_backdrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/gray"
                app:indicatorName="LineScalePulseOutRapidIndicator"/>

        </FrameLayout>
    </FrameLayout>

</layout>